src/test/ui/nll/issue-47470.stderr
error[E0597]: `local` does not live long enough
  --> $DIR/issue-47470.rs:15:9
   |
LL |         &local
   |         ^^^^^^ borrowed value does not live long enough
LL |     }
   |     -- borrow later used here
   |     |
   |     `local` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
